# pomo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sync-report.json
.claude/: settings.local.json
.claude/commands/: work-ticket.md
.github/: pr-body.md
.github/workflows/: ci.yml  claude-code-autorun.yml  release.yml
docs/: prd-pomodoro-cli.md
pomo/: __init__.py  __main__.py  cli.py
pomo/core/: __init__.py  clock.py  config.py  timer.py
pomo/storage/: __init__.py  db.py  models.py  repository.py
pomo/storage/migrations/: 001_initial.sql
pomo/ui/: __init__.py  render.py  tables.py
scripts/: project_status.sh
tests/: test_cli.py  test_cli_history.py  test_cli_start.py  test_cli_stats.py  test_clock.py  test_config.py  test_db.py  test_render.py  test_repository.py  test_timer.py
