[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomo-devOMAR"
version = "0.1.0"
description = "Command-line Pomodoro timer with SQLite session logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Omar Alfarraj" }]
keywords = ["pomodoro", "cli", "productivity", "timer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
pomo = "pomo.cli:app"

[project.urls]
Homepage = "https://github.com/devOMAR-2/pomo"
Issues = "https://github.com/devOMAR-2/pomo/issues"

[tool.hatch.build.targets.wheel]
packages = ["pomo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]  # test names may not follow snake_case strictly

[tool.mypy]
strict = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["pomo"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
